# center-cluster-esp32-p4

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/bsp_extra/: idf_component.yml
main/: CMakeLists.txt  lv_conf.h  main.c
main/tach_ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/tach_ui/boot/: boot_screen.c
main/tach_ui/components/: ui_comp_hook.c
main/tach_ui/fonts/: school_bell_48.c  ui_font_DotoLarge.c
main/tach_ui/screens/: ui_Screen1.c  ui_Screen1.h
